tests/baselines/reference/classStaticFieldInferenceContextualTypingOutsideOfStaticBlock1.errors.txt
classStaticFieldInferenceContextualTypingOutsideOfStaticBlock1.ts(14,27): error TS2820: Type '"runnnning"' is not assignable to type '"running" | "stopped"'. Did you mean '"running"'?
classStaticFieldInferenceContextualTypingOutsideOfStaticBlock1.ts(27,27): error TS2820: Type '"runnnning"' is not assignable to type '"running" | "stopped"'. Did you mean '"running"'?


==== classStaticFieldInferenceContextualTypingOutsideOfStaticBlock1.ts (2 errors) ====
    type State = { type: "running"; speed: number } | { type: "stopped" };
    
    declare const initialState: State;
    
    class Actor1 {
      static initialState;
    
      static {
        this.initialState = initialState;
      }
    
      static setAsInitiallyRunning(speed: number) {
        this.initialState = { type: "running", speed };
        this.initialState = { type: "runnnning", speed }; // error
                              ~~~~
!!! error TS2820: Type '"runnnning"' is not assignable to type '"running" | "stopped"'. Did you mean '"running"'?
!!! related TS6500 classStaticFieldInferenceContextualTypingOutsideOfStaticBlock1.ts:1:16: The expected type comes from property 'type' which is declared here on type 'State'
      }
    }
    
    class Actor2 {
      static accessor initialState;
    
      static {
        this.initialState = initialState;
      }
    
      static setAsInitiallyRunning(speed: number) {
        this.initialState = { type: "running", speed };
        this.initialState = { type: "runnnning", speed }; // error
                              ~~~~
!!! error TS2820: Type '"runnnning"' is not assignable to type '"running" | "stopped"'. Did you mean '"running"'?
!!! related TS6500 classStaticFieldInferenceContextualTypingOutsideOfStaticBlock1.ts:1:16: The expected type comes from property 'type' which is declared here on type 'State'
      }
    }
    